--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,13 @@ section{
 
 .header .navbar #close{
     display: none;
+    position: absolute;
+    top: 4rem;
+    right: 2rem;
+    cursor: pointer;
+    font-size: 3rem;
+    color: #fff;
+
 
 }
 
@@ -61,6 +68,12 @@ section{
 
 .header #menu{
     display: none;
+    cursor: pointer;
+    font-size: 2.5rem;
+    color: #fff;
+    
+
+
 }
 
 /* end */
@@ -80,6 +93,7 @@ section{
 
 .home .content{
     flex: 1 1 40rem;
+    padding-top: 6.5em;
 
 }
 
@@ -127,4 +141,78 @@ section{
 .home .image img{
     width: 100%;
 
+}
+
+/* end */
+
+@media (max-width:991px) {
+    html{
+        font-size: 55%;
+    
+    }
+    .header{
+        padding: 2rem;
+
+    }
+
+    section{
+        padding: 2rem;
+    }
+}
+
+@media (max-width:768px){
+
+    .header #menu{
+        display: inline-block;
+
+    }
+    .header .navbar{
+        position: fixed;
+        top: 0;
+        right: -105%;
+        width: 30rem;
+        background: rgb(85, 35, 12);
+        backdrop-filter: blue(50px);
+        transition: .5s;
+        height: 100%;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        z-index: 1200;
+
+    }
+    .header .navbar.active{
+        right: 0;
+
+    }
+    .header .navbar #close{
+        display: block;
+    }
+    .header .navbar a{
+        display: block;
+        margin: 1rem 0;
+        text-align: center;
+        font-size: 3rem;
+    }
+    .home .content{
+        padding-top: 9.5rem;
+
+    }
+    .home .image img{
+        width: 368px;
+    }
+    .home .content .title{
+        font-size: 4rem;
+
+    }
+
+    .home .content .description{
+        font-size: 1.6rem;
+    }
+}
+
+@media (max-width:450px){
+    html{
+        font-size:50% ;
+    }
 }
