--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,93 @@ section{
 
 /*  end   */
 
+
+/* menu */
+
+.body {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    min-height: 100vh ;
+    align-items: center;
+    justify-content: center;
+    background: #c27e3f;
+    padding: 20px;
+
+}
+
+.menu h1 {
+    font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+  
+.menu  h2 {
+    font-size: 40px;
+    margin-top: 0;
+  }
+
+  
+.menu  h1, h2, p {
+    text-align: center;
+  }
+  
+.menu {
+    width: 80%;
+    background-color: #a8692f;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: 1.75rem;
+    padding: 20px;
+    max-width: 500px;
+  }
+  .menu img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+  }
+
+  
+  .menu hr {
+    height: 2px;
+    background-color: brown;
+    border-color: brown;
+  }
+  
+  .bottom-line {
+    margin-top: 25px;
+  }
+  
+  
+  .item p {
+    display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 18px;
+  }
+   
+  
+  .flavor, .dessert {
+    text-align: left;
+    width: 75%;
+  }
+  
+  .price {
+    text-align: right;
+    width: 25%;
+  }
+
+
+
+
+
+
+/*  end   */
+
 @media (max-width:991px) {
     html{
         font-size: 55%;
